objects/UNITY_Status_Fields_Update_Map__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds map of status field values to the parent object update value and their sequence order</description>
    <fields>
        <fullName>UNITY_Order__c</fullName>
        <description>The sequence order for the status</description>
        <label>Order</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Origin_Object__c</fullName>
        <description>The object that the status belongs to</description>
        <label>Origin Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Origin_Record_Type__c</fullName>
        <description>The record type of the origin record</description>
        <label>Origin Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Origin_Value__c</fullName>
        <description>The status in the origin object that updates the target object to the target value</description>
        <label>Origin Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Target_Object__c</fullName>
        <description>The object that gets affected by this status</description>
        <label>Target Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Target_Record_Type__c</fullName>
        <description>The record type of the target record</description>
        <label>UNITY Target Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Target_Value__c</fullName>
        <description>The value to assign to the target object</description>
        <label>Target Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>UNITY Status Fields Update Map</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UNITY_Order__c</columns>
        <columns>UNITY_Origin_Object__c</columns>
        <columns>UNITY_Origin_Record_Type__c</columns>
        <columns>UNITY_Origin_Value__c</columns>
        <columns>UNITY_Target_Object__c</columns>
        <columns>UNITY_Target_Record_Type__c</columns>
        <columns>UNITY_Target_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>